name:                lisp
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/danslocombe/lisp-interpreter#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Slocombe
maintainer:          ds4314@ic.ac.uk
copyright:           2017 Daniel Slocombe
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable lisp
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , parsec >= 3.1.11
                     , ansi-terminal >= 0.6.3
  other-modules:       Eval
                     , Parse
                     , Types
